[package]
name = "wifi_scan"
version = "0.6.2"
authors = ["simon0302010 <simon@hackclub.app>"]
description = "A crate to list WiFi hotspots in your area. Fork of booyaa/wifiscanner with many improvements to make it future-proof."
repository = "https://github.com/simon0302010/wifi-scan"
documentation = "https://docs.rs/wifi_scan"
readme = "README.md"
keywords = ["wifi","hotspots","network"]
license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "wifi_scan"
path = "src/bin/main.rs"

[dependencies]
regex = "1"
itertools = "0.14.*"

[target.'cfg(target_os = "linux")'.dependencies]
neli-wifi = "0.6.*"
neli = "0.6.*"
nl80211-rs = "0.1.1"
netlink-rust = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
win32-wlan = "0.1.0"
futures = "0.3"
libwifi = "0.4.*"
