[package]
name = "wifi_scan"
version = "0.7.3"
authors = ["simon0302010 <simon@hackclub.app>"]
description = "A crate to list WiFi hotspots in your area. Fork of booyaa/wifiscanner with many improvements to make it future-proof."
repository = "https://github.com/simon0302010/wifi-scan"
documentation = "https://docs.rs/wifi_scan"
readme = "README.md"
keywords = ["wifi","hotspots","network"]
license = "Apache-2.0"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
neli-wifi = "0.6.*"
nl80211-rs = "0.1.1"
netlink-rust = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
win32-wlan = "0.1.0"
futures = "0.3"
libwifi = "0.4.*"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-wlan = "0.3"
objc2-foundation = "0.3"

[target.'cfg(target_os = "openbsd")'.build-dependencies]
cc = "^1.2"

[target.'cfg(target_os = "openbsd")'.dependencies]
libc = "0.2.*"

[target.'cfg(target_os = "freebsd")'.build-dependencies]
cc = "^1.2"

[target.'cfg(target_os = "freebsd")'.dependencies]
libc = "0.2.*"

[target.'cfg(target_os = "netbsd")'.build-dependencies]
cc = "^1.2"

[target.'cfg(target_os = "netbsd")'.dependencies]
libc = "0.2.*"